# burguer-pos.backend

./: bootstrap.py  docker-compose.yml  dockerfile  pyproject.toml
.github/workflows/: ci.yml
Docker/Nginx/: nginx.conf
src/: __init__.py  bootstrap.py  main.py
src/application/dtos/: ingredientDto.py  orderDto.py  orderProductDto.py  productDto.py  productIngredientDto.py  tokenDto.py  userDto.py
src/application/services/: ingredientService.py  orderService.py  productService.py  userService.py
src/domain/auth/: authTokenService.py  hasher.py
src/domain/classes/: ingredient.py  order.py  orderProduct.py  product.py  productIngredient.py  token.py  user.py
src/domain/errors/: errors.py
src/domain/repositories/: ingredientRepository.py  orderProductRepository.py  orderRepository.py  postgresql_repository.py  productIngredientRepository.py  productRepository.py  userRepository.py
src/infrastructure/controllers/: ingredientController.py  ordersController.py  productController.py  userController.py
src/infrastructure/db/: db.py
src/infrastructure/models/: ingredientModel.py  orderModel.py  orderProductModel.py  productIngredientModel.py  productModel.py  userModel.py
src/infrastructure/repositories/: postgresql_ingredient_repository.py  postgresql_order_product_repository.py  postgresql_product_ingredient_repository.py  postgresql_product_repository.py  postgresql_user_repository.py  postresql_order_repository.py
src/infrastructure/security/: auth.py  hasher.py
tests/: boostrap_test.py  conftest.py
tests/integration/: test_user_controller.py
(+4 files in other folders)
