[project]
name = "burguer-pos-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.119.1",
    "kink>=0.8.1",
    "pwdlib[argon2]>=0.2.1",
    "pydantic>=2.12.3",
    "pyjwt>=2.10.1",
    "pytest>=8.4.2",
    "sqlmodel>=0.0.27",
]
